syntax = "proto3";
package outer;
option  go_package = "/outer";

import "common.proto";

message MailListReq {   // tag:player
    int32 count = 1;
}
message MailListRsp {
    repeated Mail Mails = 1;
}

message AddMailNotify {
    string Uuid = 1;
}

message ReadMailReq {   // tag:player
    string Uuid = 1;
}
message ReadMailRsp {
    string Uuid = 1;
}

message ReceiveMailItemReq {    // tag:player
    string Uuid = 1;
}

message ReceiveMailItemRsp {
    string Uuid = 1;
}

message DeleteMailReq { // tag:player
    repeated string Uuids = 1;
}
